<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/menu"
        android:textColor="#106097"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button_menu_choose_set"
        style="@style/Menu_Button"
        android:layout_marginTop="10dp"
        android:text="@string/choose_set" />

    <Button
        android:id="@+id/button_menu_references"
        style="@style/Menu_Button"
        android:layout_marginTop="10dp"
        android:text="@string/other_apps" />

    <Button
        android:id="@+id/button_menu_about_us"
        style="@style/Menu_Button"
        android:layout_marginTop="10dp"
        android:text="@string/about_us" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center|bottom"
        android:layout_weight="1" >

        <Button
            android:id="@+id/button_menu_exit"
            style="@style/Menu_Button"
            android:layout_gravity="bottom|center"
            android:layout_marginTop="10dp"
            android:text="@string/exit" />
    </LinearLayout>

</LinearLayout>