<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/other_apps"
        android:textColor="#106097"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageView_references_duplo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginEnd="35dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="35dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/reference_duplo"
            android:src="@drawable/reference_duplo" />

        <ImageView
            android:id="@+id/imageView_references_legoCity"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/reference_city"
            android:src="@drawable/reference_city" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageView_references_chima"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginEnd="35dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="35dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/reference_chima"
            android:src="@drawable/reference_chima" />

        <ImageView
            android:id="@+id/imageView_references_friends"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/reference_friends"
            android:src="@drawable/reference_friends" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageView_references_starwars"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginEnd="35dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="35dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/reference_starwars"
            android:src="@drawable/reference_starwars" />

        <ImageView
            android:id="@+id/imageView_references_technic"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/reference_technic"
            android:src="@drawable/reference_technic" />
    </LinearLayout>

</LinearLayout>