<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/take_picture"
        android:textColor="#106097"
        android:textSize="30sp" />

    <SurfaceView
        android:id="@+id/surfaceView_take_photo"
        android:layout_width="match_parent"
        android:layout_height="200sp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/button_takePhoto_takePicture"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_shape_menu"
        android:text="@string/take_photo"
        android:textColor="#106097" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center|bottom"
        android:layout_weight="1" >

        <Button
            android:id="@+id/button_takePhoto_confirm"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_menu_effect"
            android:text="@string/next"
            android:textColor="@color/button_menu_textcolor" />
    </LinearLayout>

</LinearLayout>