<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/choose_set"
        android:textColor="#106097"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/imageView_chooseSet"
        android:layout_width="match_parent"
        android:layout_height="200sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/choose_set"
        android:rotation="270" />

    <TextView
        android:id="@+id/choose_set_textView_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:textColor="#E8490F"
        android:textSize="12sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/choose_set_textView_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textColor="#106097"
        android:textSize="12sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/choose_set_textView_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textColor="#106097"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center|bottom"
        android:layout_weight="1" >

        <Button
            android:id="@+id/fragment_choose_set_instructionsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/button_menu_effect"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/instructions"
            android:textColor="@color/button_menu_textcolor" />

        <Button
            android:id="@+id/fragment_choose_set_chooseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/button_menu_effect"
            android:text="@string/choose"
            android:textColor="@color/button_menu_textcolor" />
    </LinearLayout>

</LinearLayout>